--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       <li class="course">Métodos de Investigación Social (6 ECTS)</li>
     </ul>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
