--- a/index.html
+++ b/index.html
@@ -2,37 +2,111 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Curricular Antropología - USAL</title>
+  <title>Malla Antropología – USAL</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Malla Curricular – Antropología (USAL)</h1>
-  <p>Haz clic en cada asignatura para marcarla como aprobada ✅</p>
+  <h1>🧠 Malla Curricular – Antropología (USAL)</h1>
+  <p>Haz clic en una asignatura para marcarla como aprobada ✅</p>
 
-  <!-- PRIMER CURSO -->
-  <div class="semester">
-    <h2>1º Año – 1º Semestre</h2>
-    <ul>
-      <li class="course" data-id="intro-antropologia">Introducción a la Antropología</li>
-      <li class="course" data-id="intro-sociologia">Introducción a la Sociología</li>
-      <li class="course" data-id="historia-mundo">Historia del Mundo Contemporáneo</li>
-      <li class="course" data-id="metodos">Métodos de Investigación en Antropología</li>
-      <li class="course" data-id="evolucion-humana">Evolución Humana</li>
-    </ul>
+  <!-- PRIMER AÑO -->
+  <div class="year">
+    <h2>1º Año</h2>
+    <div class="semester">
+      <h3>1º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="intro-antropologia">Introducción a la Antropología</div>
+        <div class="course" data-id="intro-sociologia">Introducción a la Sociología</div>
+        <div class="course" data-id="historia-mundo">Historia del Mundo Contemporáneo</div>
+        <div class="course" data-id="metodos">Métodos en Antropología</div>
+        <div class="course" data-id="evolucion-humana">Evolución Humana</div>
+      </div>
+    </div>
+    <div class="semester">
+      <h3>2º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="geo-humana">Geografía Humana</div>
+        <div class="course" data-id="teorias-antropologicas">Teorías Antropológicas</div>
+        <div class="course" data-id="metodos-cualitativos">Métodos Cualitativos</div>
+        <div class="course" data-id="eco">Economía (Inglés)</div>
+        <div class="course" data-id="politica">Ciencia Política (Inglés)</div>
+      </div>
+    </div>
   </div>
 
-  <div class="semester">
-    <h2>1º Año – 2º Semestre</h2>
-    <ul>
-      <li class="course" data-id="geo-humana">Geografía Humana</li>
-      <li class="course" data-id="teorias-antropologicas">Teorías Antropológicas</li>
-      <li class="course" data-id="metodos-cualitativos">Métodos Cualitativos</li>
-      <li class="course" data-id="eco">Introduction to Economics</li>
-      <li class="course" data-id="politica">Introduction to Political Science</li>
-    </ul>
+  <!-- SEGUNDO AÑO -->
+  <div class="year">
+    <h2>2º Año</h2>
+    <div class="semester">
+      <h3>3º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="linguistics">Lingüística General (Inglés)</div>
+        <div class="course" data-id="biologia">Bases Biológicas del Comportamiento</div>
+        <div class="course" data-id="parentesco">Antropología del Parentesco</div>
+        <div class="course" data-id="politica-antropo">Antropología Política</div>
+        <div class="course" data-id="cuantitativas">Técnicas Cuantitativas</div>
+      </div>
+    </div>
+    <div class="semester">
+      <h3>4º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="filosofia">Bases Filosóficas</div>
+        <div class="course" data-id="psicosociales">Bases Psicosociales</div>
+        <div class="course" data-id="linguistica-antropo">Lingüística Antropológica</div>
+        <div class="course" data-id="economica">Antropología Económica</div>
+        <div class="course" data-id="audiovisual">Laboratorio Audiovisual</div>
+      </div>
+    </div>
   </div>
 
-  <!-- Puedes seguir añadiendo más semestres aquí -->
+  <!-- TERCER AÑO -->
+  <div class="year">
+    <h2>3º Año</h2>
+    <div class="semester">
+      <h3>5º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="arqueo-metodos">Arqueología: Métodos</div>
+        <div class="course" data-id="rituales">Rituales y Creencias</div>
+        <div class="course" data-id="ecologia">Ecología Cultural</div>
+        <div class="course" data-id="historica">Antropología Histórica</div>
+        <div class="course" data-id="aplicada">Antropología Aplicada</div>
+      </div>
+    </div>
+    <div class="semester">
+      <h3>6º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="arqueo-teoria">Arqueología: Teoría</div>
+        <div class="course" data-id="genero">Antropología de Género</div>
+        <div class="course" data-id="medica">Antropología Médica</div>
+        <div class="course" data-id="publicas">Antropología y Políticas Públicas</div>
+        <div class="course" data-id="cognicion">Cognición y Cultura</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- CUARTO AÑO -->
+  <div class="year">
+    <h2>4º Año</h2>
+    <div class="semester">
+      <h3>7º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="lab-etno">Laboratorio de Escritura Etnográfica</div>
+        <div class="course" data-id="etica">Ética Profesional</div>
+        <div class="course" data-id="iberoamerica">Antropología de Iberoamérica</div>
+        <div class="course op" data-id="optativa1">Optativa 1</div>
+        <div class="course op" data-id="optativa2">Optativa 2</div>
+      </div>
+    </div>
+    <div class="semester">
+      <h3>8º Semestre</h3>
+      <div class="grid">
+        <div class="course" data-id="desarrollo">Antropología del Desarrollo</div>
+        <div class="course" data-id="tfg">Trabajo Fin de Grado (TFG)</div>
+        <div class="course op" data-id="optativa3">Optativa 3</div>
+        <div class="course op" data-id="optativa4">Optativa 4</div>
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
